# Lichtfeld-Densification-Plugin

./: .gitignore  README.md  __init__.py  densify.py  garbage.md  plugin.toml  pyproject.toml
RoMaV2/: .gitignore  README.md  pyproject.toml
RoMaV2/demo/: demo_match.py
RoMaV2/src/romav2/: __init__.py  device.py  dpt.py  features.py  io.py  local_correlation.py  logging.py  romav2.py
RoMaV2/src/romav2/benchmarks/: __init__.py  mega1500.py  scannet1500.py
RoMaV2/src/romav2/vit/: __init__.py  attention.py  block.py  ffn_layers.py  patch_embed.py  rope.py  rope_mixed.py  utils.py
RoMaV2/tests/: test_bidirectional.py  test_mega1500.py  test_scannet1500.py  test_smoke.py
core/: __init__.py  camera_models.py  config.py  debug_viz.py  geometry.py  image_utils.py  matcher.py  pipeline.py  sampling.py  selection.py  threaded_dataloader.py  writers.py
panels/: __init__.py  debug_matches.py  debug_matches.rcss  debug_matches.rml  densification.py  densification.rcss  densification.rml
