# SPDX-FileCopyrightText: 2025 Shady Gmira
# SPDX-License-Identifier: GPL-3.0-or-later

[project]
name = "densification"
version = "0.8.1"
description = "Dense point cloud initialization using RoMa v2 matching"
authors = [{ name = "Shady Gmira" }]

dependencies = [
    "torch",
    "torchvision",
    "numpy==2.4.1",
    "pycolmap",
    "Pillow",
    "scipy",
    "tqdm",
    "einops>=0.8.1",
    "rich>=14.2.0",
    "open3d",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[tool.lichtfeld]
hot_reload = true
plugin_api = ">=1,<2"
lichtfeld_version = ">=0.5.0"
required_features = []
